syntax = "proto3";

option go_package = "/;liveProto";

message  stopService{
  string room_id = 2;
  string nonce = 6;
  string sign = 7;
}